Updated registration form &Integration
